--- a/carclub/style.css
+++ b/carclub/style.css
@@ -224,6 +224,23 @@ hr {
 
 }
 
+@media screen and (max-width: 770px) {
+    .single-service {
+        flex-basis: 100%;
+        margin-bottom: 30px;
+    }
+    .service-disc p {
+        font-size: 12px;
+    
+    }
+    hr {
+        margin: 5px auto;
+    }
+    .service-disc {
+        bottom: 38% !important;
+    }
+}
+
 #feature {
     width: 100%;
     padding: 70px 0;
@@ -263,4 +280,35 @@ hr {
     display: flex;
     align-items: center;
     margin-bottom: 40px;
+}
+
+.feature-icon .fa {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    line-height: 50px;
+    border-radius: 8px;
+    color: #002C40;
+    border: 1px solid #002C40;
+}
+
+.feature-text p{
+    padding: 0 20px;
+    text-align: initial;
+}
+
+@media screen and (max-width: 770px) {
+    .title-text h1 {
+        font-size: 35px;
+        font-family: 'Sofia';
+    }
+    .features {
+        flex-basis: 100%;
+    }
+    .features-img {
+        flex-basis: 100%;
+    }
+    .features-img img {
+        width: 100%;
+    }
 }
