--- a/carclub/style.css
+++ b/carclub/style.css
@@ -310,8 +310,8 @@ hr {
     font-size: 30px;
     line-height: 50px;
     border-radius: 8px;
-    color: #002C40;
-    border: 1px solid #002C40;
+    color: #006593;
+    border: 1px solid #006593;
 }
 
 .feature-text p{
