--- a/carclub/style.css
+++ b/carclub/style.css
@@ -18,7 +18,7 @@ body::-webkit-scrollbar {
 
 .navbar {
     position: fixed;
-    height: 80px;
+    height: 72px;
     width: 100vw;
     background-color: #002C40;
     display: flex;
@@ -65,6 +65,19 @@ body::-webkit-scrollbar {
     background-color: rgba(255, 255, 255, 0.369);
     padding: 12px 30px;
     border-radius: 50px;
+}
+
+@media screen and (max-width: 770px) {
+    .navbar {
+        position: fixed;
+        height: 100px;
+        width: 100vw;
+        background-color: #002C40;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 5;
+    }
 }
 
 #banner {
@@ -413,4 +426,13 @@ hr {
     .footer-left .fa, .footer-right .fa {
         text-align: initial;
     }
+}
+
+#preloader {
+    background: #fff url(./images/loading-9.gif) no-repeat center center;
+    background-size: 20%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
 }
