--- a/carclub/style.css
+++ b/carclub/style.css
@@ -90,16 +90,18 @@ body::-webkit-scrollbar {
     height: 250px;
 }
 
+.dropdown-menu li {
+    text-decoration: none;
+}
+
 .dropdown-menu li a {
     padding: 0.7rem;
     list-style-type: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-decoration: none;
     transition: 0.5s;
 }
-
 
 .dropdown-menu li a:hover {
     background-color: rgba(255, 255, 255, 0.369);
