--- a/carclub/style.css
+++ b/carclub/style.css
@@ -40,13 +40,14 @@ body::-webkit-scrollbar {
 .nav-options ul {
     height: 100%;
     width: 800px;
+    margin-right: 25px;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .nav-options li {
-    display: inline;
+    display: inline-block;
     border-radius: 50px;
     font-weight: bold;
 }
@@ -70,6 +71,7 @@ body::-webkit-scrollbar {
 #navbar .toggle-btn {
     color: #fff;
     font-size: 1.5rem;
+    margin-right: 25px;
     cursor: pointer;
     display: none;
 }
@@ -87,13 +89,13 @@ body::-webkit-scrollbar {
 }
 
 .dropdown-menu.open {
-    height: 280px;
+    height: 300px;
 }
 
 .dropdown-menu li {
     list-style-type: none;
     border: 1px solid rgba(255, 255, 255, 0.369);
-    margin: 5%;
+    margin: 28px 30px;
     border-radius: 50px;
 }
 
@@ -103,6 +105,7 @@ body::-webkit-scrollbar {
     align-items: center;
     justify-content: center;
     transition: 0.5s;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 
@@ -123,7 +126,7 @@ body::-webkit-scrollbar {
     }
 
     .logo {
-        margin-left: 10px;
+        margin-left: 25px;
     }
 
     #navbar .toggle-btn {
@@ -133,7 +136,6 @@ body::-webkit-scrollbar {
 
     .dropdown-menu {
         display: block;
-
     }
 }
 
@@ -157,7 +159,7 @@ body::-webkit-scrollbar {
 .content h1 {
     font-size: 70px;
     margin-top: 80px;
-    font-family: 'Sofia';
+    font-family: 'font-family: 'Work Sans', sans-serif;';
 }
 
 .content p {
@@ -210,7 +212,7 @@ button:hover span {
     .content h1 {
         font-size: 55px;
         margin-top: 80px;
-        font-family: 'Sofia';
+        font-family: 'Work Sans', sans-serif;
         line-height: 60px;
     }
 
@@ -261,7 +263,7 @@ button:hover span {
 
 .title-text h1 {
     font-size: 50px;
-    font-family: 'Sofia';
+    font-family: 'Work Sans', sans-serif;
 }
 
 .service-box {
@@ -281,6 +283,10 @@ button:hover span {
     position: relative;
 }
 
+.single-service h3 {
+    font-family: 'Work Sans', sans-serif;
+}
+
 .single-service img {
     width: 100%;
     height: 100%;
@@ -294,7 +300,6 @@ button:hover span {
     top: 0;
     border-radius: 7px;
     background: linear-gradient(rgba(0, 0, 0, 0.5), #002C40);
-    /* cursor: pointer; */
 }
 
 .service-disc {
@@ -315,7 +320,7 @@ hr {
 
 .service-disc p {
     font-size: 14px;
-
+    font-family: 'Ubuntu', sans-serif;
 }
 
 @media screen and (max-width: 770px) {
@@ -371,6 +376,7 @@ hr {
     margin-bottom: 10px;
     font-weight: 100;
     color: #006593;
+    font-family: 'Work Sans', sans-serif;
 }
 
 .features-desc {
@@ -392,12 +398,13 @@ hr {
 .feature-text p {
     padding: 0 20px;
     text-align: initial;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 @media screen and (max-width: 770px) {
     .title-text h1 {
         font-size: 35px;
-        font-family: 'Sofia';
+        font-family: 'Work Sans', sans-serif;
     }
 
     .features h1 {
@@ -444,10 +451,12 @@ hr {
 
 .footer-row h1 {
     margin: 10px 0;
+    font-family: 'Work Sans', sans-serif;
 }
 
 .footer-row p {
     line-height: 35px;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .footer-left .fa,
