--- a/carclub/style.css
+++ b/carclub/style.css
@@ -409,7 +409,7 @@ hr {
 
     .features h1 {
         font-weight: bold;
-        font-family: 'Ubuntu', sans-serif;
+        font-family: 'Work Sans', sans-serif;
     }
 
     .features {
